# psobb-studio

./: .env.example  .gitignore  Makefile  README.md  atlas_layouts.py  failures.json  manifest.py  package-lock.json  package.json  psobb_studio_cli.py  pyproject.toml  requirements.txt  run.bat  server.py
aigen/: __init__.py  _imageutil.py  a1111.py  budget.py  comfy.py  diffusers_provider.py
data_meta/: categorization_db.json  categorization_db.md  psov2_names.json
docs/: SMOKE_REPORT.md
formats/: __init__.py  _psobb_engine_tables_extra.py  _quest_opcode_table.py  afs.py  afs_reader.py  anim_blend.py  anim_retarget.py  archive_entry.py  audio.py  audio_codec.py  audio_pac.py  battle_param.py  bml.py  composite_assembly.py  decimate.py  fbx_reader.py  gvr_decode.py  iff.py  import_external.py  itempmt.py  lobby_pipeline.py  match.py  material.py  mob_dsl.py  model_export.py  motion_pairing.py  nj_writer.py  njm.py  njm_writer.py  njtl.py  paint.py  parse_cache.py  prs.py  psobb_engine_tables.py  pvr_decode.py  pvr_encode.py  quest_asm.py  quest_bin.py  quest_dsl.py  quest_map.py  (+16 more)
scripts/: _perf_bench.py  _psov2_loader.mjs  _verify_derolle_assembly.py  _verify_tooltabs.py  batch_upscale_install.py  build_lobby.py  compare_render.py  coverage_audit.py  demo_capture.py  dump_bone_world_positions.py  dump_emitted_strips.py  dump_eval_hide_audit.py  e2e_smoke_run.py  gen_quest_opcodes.py  harvest_psov2_names.py  psov2_parity.mjs  render_audit.py  render_coverage_audit.py  smoke_render_all.mjs  smoke_test.py  texture_resolution_audit.py  upscale_candidates.txt
static/: anim_editor_panel.js  anim_library_panel.js  app.js  archive_panel.js  asset_lifecycle.js  asset_names.js  asset_router.js  audio_panel.js  battle_param_panel.js  bus.js  edit_panel.js  floor_panel.js  hotkeys.js  import_panel.js  index.html  itempmt_panel.js  (+26 more)
(+133 files in other folders)
